--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <link rel="stylesheet" href="https://at.alicdn.com/t/font_1767803_e7le0q2dbz8.css">
-  <link rel="stylesheet" href="https://at.alicdn.com/t/font_2457372_bzi2ilsaf56.css">
+  <link rel="stylesheet" href="https://at.alicdn.com/t/font_2457372_z3artp6tknm.css">
   <title>
-    <%= htmlWebpackPlugin.options.title %>
+    预警平台
   </title>
 </head>
 
